--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,6 @@ html, body, #root{
   padding: 0
 }
 
-#root > div > .container > .content {
-  padding: 1em;
-}
 
 .pointer {
   cursor: pointer;
@@ -27,16 +24,6 @@ button {
   width: 100%;
 }
 
-.notfound-img {
-  width: 55%;
-  margin: auto;
-  margin-top: 5em;
-}
-
-.borderBottom {
-  border-bottom: 1px solid rgba(0,0,0,0.5);
-}
-
 .content ul {
   list-style: none
 }
@@ -46,46 +33,18 @@ button {
   background: transparent !important;
 }
 
-.inline-img {
-  display: inline-block;
-  margin: 0 !important;
-}
-
 .no-margin {
   margin: 0 !important;
 }
 
-a {
-  color: black;
-  text-decoration: none !important;
+.notification {
+  border-radius: 0;
 }
 
-
-.box, .notification, .panel-heading, .input, .tag {
-  border-radius: 0 !important;
+.section {
+  padding-bottom: 4em;
 }
 
-.modal.is-active > div:not(.modal-background) {
-  max-width: 70%;
-  min-width: 50%;
-  z-index: 1000;
-  background: white;
-  padding: 1em;
-  max-height: 70vh;
-  min-height: 50vh;
-  overflow-y: auto;
-}
-
-.title-app-name {
-  padding: 0.5em 1em;
-}
-
-
-table.minimalTable {
-  font-size: 0.7em;
-}
-
-
-table.minimalTable th{
-  font-size: 1.2em;
+.section figure {
+  margin: auto;
 }
